2013-08-01  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-dribble-save): Only save the dribble file if it's
	not empty.

	* nnrss.el (nnrss-discover-feed): Indent.

2013-08-01  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus-util.el (gnus-emacs-completing-read): Isolate XEmacs stuff.

2013-07-30  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* gnus-start.el (gnus-read-active-for-groups): Always mark the data as
	dirty to ensure nnimap data being saved.

2013-07-30  Tassilo Horn  <tsdh@gnu.org>

	* gnus-sum.el (gnus-summary-make-menu-bar): Add "Current thread score"
	menu entry.

	* gnus-score.el (gnus-summary-current-score): Use prefix arg to show
	the current thread's total score instead of the current article's
	score.

	* gnus-sum.el (gnus-subthread-sort-functions): New defcustom.
	(gnus-sort-threads-recursively): Delete defcustom.
	(gnus-sort-threads-recursive): Adapt accordingly.

2013-07-30  Tassilo Horn  <tsdh@gnu.org>

	* gnus-sum.el (gnus-sort-subthreads-recursive): New function.
	(gnus-sort-threads-recursive): Use it.
	(gnus-sort-threads): Unconditionally call `gnus-sort-threads-recursive'
	again.  Now that determines how to sort subthreads.

2013-07-26  Tassilo Horn  <tsdh@gnu.org>

	* gnus-sum.el (gnus-sort-threads-recursively): New defcustom.
	(gnus-sort-threads): Use it.

2013-07-25  Andreas Schwab  <schwab@linux-m68k.org>

	* gnus-art.el (gnus-button-url-regexp): Make it match url in which
	punctuation characters follow parentheses (bug#14950).

2013-07-23  Katsumi Yamaoka  <yamaoka@jpl.org>

	* gnus.el (gnus-continuum-version):
	* gnus-msg.el (gnus-extended-version): Simplify.

	* gnus.el (gnus-continuum-version-1): Remove.
	* gnus-msg.el (gnus-bug): Revert.

	Calculate gnus-version correctly on Cygwin.

	* gnus.el (gnus-continuum-version): Do main calculations in integers.
	(gnus-continuum-version-1): New function, return a string.

	* gnus-msg.el (gnus-extended-version, gnus-bug):